# OnlineFormFilling

./: .gitignore  Dockerfile  README.md  driver.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
conda_recipe/: environment.yaml  meta.yaml
form_filling/: __init__.py  config.py  constants.py  content_utils.py  element_handlers.py  element_utils.py  exceptions.py  file_handler.py  form_filling.py  prompts.py  utils.py  value_evaluator.py
tests/: conftest.py  index.html  test_basic.py  test_config_validation_properties.py  test_constants.py  test_content_generator.py  test_edge_cases.py  test_element_types.py  test_exception_properties.py  test_exceptions.py  test_form_utils.py  test_integration.py
